# grasped_reconstruction

./: CMakeLists.txt  package.xml  vs_ws.code-workspace
cfg/: coke_can.world  config.rviz  octomap_mapping.launch
include/grasped_reconstruction/: grasped_reconstruction.h
launch/: bringup.launch  bringup_server.launch  grasped_reconstruction.launch
scripts/: grasp_selection.py  grasp_training.py  object_ground_truth.yaml  parse_gt.py  train_grasp_model.py
src/: grasped_reconstruction.cpp
srv/: CalculateNbv.srv  CaptureAndProcessObservation.srv  GTEval.srv
