<?xml version="1.0"?>
<package format="2">
  <name>grasped_reconstruction</name>
  <version>0.0.0</version>
  <description>The grasped_reconstruction package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="et@todo.todo">et</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/grasped_reconstruction</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
    <depend>pcl</depend>
    <depend>pcl_msgs</depend>
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>grid_map_core</build_depend>
    <build_depend>grid_map_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>grid_map_ros</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>octomap</build_depend>
    <build_depend>grasp_execution_msgs</build_depend>
    <build_depend>octomap_ros</build_depend>    
    <build_depend>tf2_geometry_msgs</build_depend>    

    <build_depend>moveit_msgs</build_depend>
    <build_depend>octomap_msgs</build_depend>
        <build_depend>libpcl-all-dev</build_depend>

  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
    <exec_depend>gazebo_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>grasp_execution_msgs</exec_depend>
    <exec_depend>grid_map_core</exec_depend>
    <exec_depend>grid_map_msgs</exec_depend>
    <exec_depend>grid_map_ros</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>octomap</exec_depend>
    <exec_depend>octomap_ros</exec_depend>
    <exec_depend>moveit_msgs</exec_depend>
    <exec_depend>octomap_msgs</exec_depend>
    <exec_depend>libpcl-all</exec_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
